# CS-236

./: README.md
Database/: CMakeLists.txt  Database.h  Interpreter.cpp  Parameter.h  Parser.cpp  Parser.h  Relation.cpp  Relation.h  Rule.h  Scanner.h  Tuple.h  lab3
OptimizedRules/: CMakeLists.txt  Database.h  DatalogProgram.h  Graph.h  Interpreter.cpp  Interpreter.h  Node.h  Parameter.h  Parser.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.h  lab5  main.cpp  makefile  test.txt
Parser/: CMakeLists.txt  DatalogProgram.h  Parser.cpp  lab2  main.cpp
Rules/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Predicate.h  Relation.cpp  Relation.h  Scheme.h  lab4  makefile  test.txt
Scanner/: CMakeLists.txt  Scanner.cpp  Token.h  lab1  main.cpp
